Added main menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -10,11 +10,19 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Bojanvujatovic.github.io by bojanvujatovic</title>
+    <title>Bojan Vujatović</title>
   </head>
 
   <body>
     <div id="container">
+      <div class="left">
+        <ul id="main_menu">
+            <li><a href="/"><h2>About me</h2></a></li>
+            <li><a href="/blog.html"><h2>Blog</h2></a></li>
+        </ul>
+        
+      </div>
+      
       <div class="inner">
 
         <header>
