--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,15 +10,19 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Bojan Vujatović</title>
+    <title>Bojan Vujatovic</title>
   </head>
 
   <body>
     <div id="container">
       <div class="left">
         <ul id="main_menu">
-            <li><a href="/"><h2>About me</h2></a></li>
-            <li><a href="/blog.html"><h2>Blog</h2></a></li>
+            <li><a href="/">
+                <h2 {% if page.marked_menu_item == "About me" %}class="active"{% endif %}>About me</h2>
+            </a></li>
+            <li><a href="/blog.html">
+                <h2 {% if page.marked_menu_item == "Blog" %}class="active"{% endif %}>Blog</h2>
+            </a></li>
         </ul>
         
       </div>
@@ -26,8 +30,10 @@
       <div class="inner">
 
         <header>
-          <h1>Bojanvujatovic.github.io</h1>
-          <h2>Personal website.</h2>
+        <h2>Bojan Vujatovic</h2>
+          <h1>{{ page.title }}</h1>
+          
+          <h2></h2>
         </header>
 
         <hr>
