Added main image, favicon, and TODO sign

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
+    <link rel="shortcut icon" href="/images/favicon.ico"/>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Bojan Vujatovic</title>
+    <title>Bojan Vujatovic - Home Page</title>
   </head>
 
   <body>
     <div id="container">
       <div class="left">
+      
+        <img id="main_image" src="/images/header_image.jpg" />
+      
         <ul id="main_menu">
             <li><a href="/">
                 <h2 {% if page.marked_menu_item == "About me" %}class="active"{% endif %}>About me</h2>
@@ -30,7 +34,7 @@
       <div class="inner">
 
         <header>
-        <h2>Bojan Vujatovic</h2>
+        <h2>Bojan Vujatovic - Home Page</h2>
           <h1>{{ page.title }}</h1>
           
           <h2></h2>
