Fixed resize problem, added image title, link and header link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div class="left">
       
-        <img id="main_image" src="/images/header_image.jpg" />
+        <a href="/"><img id="main_image" src="/images/header_image.jpg" title="Bojan Vujatovic"></a>
       
         <ul id="main_menu">
             <li><a href="/">
@@ -34,7 +34,7 @@
       <div class="inner">
 
         <header>
-        <h2>Bojan Vujatovic - Home Page</h2>
+        <h2><a href="/">Bojan Vujatovic - Home Page</a></h2>
           <h1>{{ page.title }}</h1>
           
           <h2></h2>
