--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -84,17 +84,29 @@ header h2 {
   line-height: 1.3;
 }
 
+header a {
+  letter-spacing: -1px;
+  font-size: 24px;
+  color: #aaa;
+  font-weight: normal;
+  line-height: 1.3;
+}
+
+header a:hover {
+  color: #666;
+}  
+
 #container {
   background: transparent url(../images/highlight-bg.jpg) 50% 0 no-repeat;
   margin: 0 auto;
   min-height: 800px;
-  width: 920px;
+  width: 820px;
 }
 
 .inner {
-  width: 620px;
+  width: 75%;
   min-height: 800px;
-  float: left;
+  float: right;
 }
 
 #container .inner img {
@@ -362,7 +374,7 @@ footer a:hover {
     display: none;
   }
   .inner {
-    width: 94%;
+    width: 75%;
     margin: 0 auto;
   }
 }
@@ -377,7 +389,7 @@ footer a:hover {
 ================================================== */
 .left{
   float: left;
-  width: 200px;
+  width: 25%;
 }
 
 #main_menu{
@@ -411,4 +423,10 @@ footer a:hover {
     margin-left:  auto;
     margin-top: 31px;
     margin-bottom: 30px;
+}
+
+h3.blog_title{
+  display: inline;
+  padding-top: 3px;
+  padding-bottom: 8px;
 }
