--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -231,21 +231,6 @@ em {
   font-style: italic;
 }
 
-table {
-  width: 100%;
-  border: 1px solid #ebebeb;
-}
-
-th {
-  font-weight: 500;
-}
-
-td {
-  border: 1px solid #ebebeb;
-  text-align: center; 
-  font-weight: 300;
-}
-
 form {
   background: #f2f2f2;
   padding: 20px;
@@ -429,4 +414,19 @@ h3.blog_title{
   display: inline;
   padding-top: 3px;
   padding-bottom: 8px;
+}
+
+footer table{
+  margin-bottom: 5px;
+}
+
+footer table td{
+  text-align: center; 
+  vertical-align: middle;
+}
+
+footer table td img{
+  width: 40px;
+  padding-left: 11px;
+  margin: 0px;
 }
